--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.khaledshalabi.movie.movie_app">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
    <application
         android:label="movie_app"
         android:name="${applicationName}"
